# UNS-MCP

./: .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  example_claude_desktop_config.json  pyproject.toml  server.py
.github/workflows/: ci.yml  release.yml
connectors/: __init__.py  logging_utils.py  utils.py
connectors/destination/: __init__.py  astra.py  databricks_vdt.py  databricksvolumes.py  destination_tool.py  generic.py  mongo.py  neo4j.py  pinecone.py  s3.py  weaviate.py
connectors/source/: __init__.py  azure.py  databricksvolumes.py  firecrawl.py  gdrive.py  logging_utils.py  onedrive.py  s3.py  salesforce.py  sharepoint.py  source_tool.py
connectors/unstructured_api/: __init__.py  partition.py
example_clients/: crew_ai_agent.py
minimal_client/: client.py  end2end_workflow.ipynb  run.py
notebooks/: custom_workflow.ipynb  end2end_azure_neo4j.ipynb  end2end_gdrive_weaviate.ipynb  end2end_s3_s3.ipynb  end2end_s3_weaviate.ipynb  end2end_workflow.ipynb  partition_local_files.ipynb
tests/: README.md  conftest.py  test_firecrawl.py
tests/connectors/source/: test_firecrawl.py
uns_mcp/: custom_http_client.py  docstring_extras.py  run.py  server.py
uns_mcp/connectors/destination/: __init__.py  databricks_vdt.py  databricksvolumes.py  destination_tool.py  neo4j.py  pinecone.py  s3.py  weaviate.py
uns_mcp/connectors/source/: __init__.py  gdrive.py  generic.py  salesforce.py  sharepoint.py  source_tool.py
