[project]
name = "uns-mcp"
version = "0.1.1"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "mcp[cli]>=1.3.0",
    "notebook>=7.3.3",
    "python-dotenv>=1.0.1",
    "unstructured-client>=0.31.3",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["connectors", "minimal_client"]  # Explicitly list your packages
