[project]
name = "uns-mcp"
version = "0.1.1"
description = "MCP server implementation providing structured tools for interacting with the Unstructured API, managing sources, destinations, workflows, and jobs"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "anthropic>=0.49.0",
    "boto3>=1.37.14",
    "firecrawl-py>=1.14.1",
    "mcp[cli]>=1.3.0",
    "python-dotenv>=1.0.1",
    "unstructured-client>=0.32.0",
    "pip",
    "pre-commit",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "notebook>=7.3.3"
]

[project.scripts]
uns-mcp = "uns_mcp.server:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "*.pyo", "__pycache__/*"]
